# ChangeLog for dev-cpp/libxmlpp
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libxmlpp/ChangeLog,v 1.86 2009/03/08 13:49:37 eva Exp $

*libxmlpp-2.24.3 (08 Mar 2009)

  08 Mar 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -libxmlpp-1.0.4-r2.ebuild, -libxmlpp-2.24.1.ebuild,
  +libxmlpp-2.24.3.ebuild:
  Bump to 2.24.3. Break ABI in TextReader but shouldn't be a problem.
  Clean up old revisions.

  26 Feb 2009; Joseph Jezak <josejx@gentoo.org> libxmlpp-1.0.5.ebuild:
  Marked ppc stable, ppc64 unstable for bug #245301.

  22 Feb 2009; Tiago Cunha <tcunha@gentoo.org> libxmlpp-1.0.5.ebuild:
  stable sparc, bug 245301

  06 Feb 2009; Jeroen Roovers <jer@gentoo.org> libxmlpp-1.0.5.ebuild:
  Stable for HPPA (bug #245301).

  01 Feb 2009; Markus Meier <maekke@gentoo.org> libxmlpp-1.0.5.ebuild:
  amd64/x86 stable, bug #245301

  31 Jan 2009; Daniel Gryniewicz <dang@gentoo.org> libxmlpp-1.0.5.ebuild:
  Fix pc file target of sed. Bug #245301

*libxmlpp-2.24.2 (03 Jan 2009)

  03 Jan 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -libxmlpp-2.13.1.ebuild, -libxmlpp-2.20.0-r1.ebuild,
  -libxmlpp-2.24.0.ebuild, +libxmlpp-2.24.2.ebuild:
  Bump to 2.24.2. Fix memleaks and cleanup old revisions.

*libxmlpp-2.24.1 (21 Dec 2008)

  21 Dec 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +libxmlpp-2.24.1.ebuild:
  Bump to 2.24.1. Leak fixes.

*libxmlpp-2.24.0 (17 Nov 2008)

  17 Nov 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +libxmlpp-2.24.0.ebuild:
  New version for GNOME 2.24. A few new APIs and bug fixes.

  10 Aug 2008; Markus Meier <maekke@gentoo.org> ChangeLog:
  x86 stable, bug #229709

  30 Jul 2008; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking libxmlpp-2.22.0 ppc stable for bug 229709

  27 Jul 2008; Olivier Crête <tester@gentoo.org> ChangeLog:
  Stable on amd64, bug #229709

  21 May 2008; Raúl Porcel <armin76@gentoo.org> libxmlpp-2.22.0.ebuild:
  alpha stable wrt #222749
