@@ -1,6 +1,6 @@
-DIST libxml++-2.24.2.tar.bz2 590695 RMD160 44700ae8fd9d8562099780a3059d1c0bcbeccfd4 SHA1 025bd6a358c5f074b9d54bb2b1247a8307c9d8f0 SHA256 5346209e1091c6e1c6b5ddacb3394ba36caa6f9e7235ed608e2d880fce0ce381
 DIST libxml++-2.24.3.tar.bz2 616830 RMD160 6f6c04452c79b2d4970d94047b9f9ac8c80f21b8 SHA1 2a9250d594f5979a28556b071fb2f76a92cd530d SHA256 ae926d2cbd4a5a00bde586b91d65a3c237cd4dd9896d62f8eb13c7917e82b654
-EBUILD libxmlpp-2.24.2.ebuild 1049 RMD160 f57cb4cfe747c0dd8c60f05b11f06b48692cb226 SHA1 4721ac56f97e35d6f03ce4c7cefc0ab98a564837 SHA256 a253082bb39558fbd2f8d6f94952b1a29617bf96485951a450a19c7bcc296bbb
+DIST libxml++-2.26.0.tar.bz2 616345 RMD160 41d9b28b873bafe4bba39bfd1ca593960714dda2 SHA1 a0526b4f1307623ceac0818713fa5ba0126a4888 SHA256 3287545d7e40bb24451f1afac6c77d545433d7efaf01ca8a60bcf9f6eacaf80a
 EBUILD libxmlpp-2.24.3.ebuild 1049 RMD160 9d4a7bcf95b4b17f57c9cf9bb9984f87e5e463c8 SHA1 bef14682765159087cc08f5fee53e42db98f0c3d SHA256 63463ff5b002267dec82a7f43fb483fa3d7fef432b575376ecc48f9a46f38ea0
-MISC ChangeLog 12324 RMD160 b19214bcabee73ed4f7988e8f4563a8c14d3f4b9 SHA1 1a45e236516b2dafc50198201060423f134e5302 SHA256 d0cbf2be2f216d7cdda0381e6c79b4746f3ae551a4e473c83ac93d2e34628764
+EBUILD libxmlpp-2.26.0.ebuild 1034 RMD160 9b0d5d42d8e0ec611a905fe2b4bb9c959d3a4c71 SHA1 74caf4b980b390e1023825b7a0eb03b82e244dc7 SHA256 e69e2afdffe05bc3c290b8133260852386289c739b7161674e708f7290a177bc
+MISC ChangeLog 12541 RMD160 4f1fb550bcbb38d2f39a7a647f0b82bfa83d3fed SHA1 f582fcb1a3c9c56f6fbb134de5a5c4a30aab46ce SHA256 a6112233b1ae4613764c50efe9f7ac76954391691bbce2aee3cd7cd0af48fba2
 MISC metadata.xml 162 RMD160 e3b9e3d8ece920d890bf37c43a6bcd9757539556 SHA1 6ee3bb3e0cce43428124dfa192af30ddb055d95f SHA256 7d0ce82d5ca3b20cb1c4641c7b7aae7082fd6be059b85fab9699095fd965f2e9
