@@ -1,6 +1,12 @@
 # ChangeLog for dev-cpp/libxmlpp
-# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libxmlpp/ChangeLog,v 1.86 2009/03/08 13:49:37 eva Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libxmlpp/ChangeLog,v 1.87 2009/05/10 22:26:38 eva Exp $
+
+*libxmlpp-2.26.0 (10 May 2009)
+
+  10 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
+  libxmlpp-2.12.0.ebuild, -libxmlpp-2.24.2.ebuild, +libxmlpp-2.26.0.ebuild:
+  New version for GNOME 2.26. Clean up old revisions.
 
 *libxmlpp-2.24.3 (08 Mar 2009)
 
